修改部分bug